@@ -11,6 +11,7 @@
 	h1 {
 		margin: 0;
 		padding: 0.5em;
+		font-size: 1.3em;
 	}
 	
 	p.description {
@@ -143,7 +144,7 @@
 </script>
 </head>
 <body>
-	<h1>Week Calendar Demo</h1>
+	<h1>Week Calendar Demo (Data supplied config overrides)</h1>
 	<p class="description">This calendar demonstrates the ability to return calendar configuration options with an event dataset.</p>
 	<div id="message" class="ui-corner-all"></div>
 	<div id="calendar_selection" class="ui-corner-all">
