@@ -97,8 +97,8 @@
 </script>
 </head>
 <body>
-	<h1>Week Calendar Demo</h1>
-	<p class="description">This calendar demonstrates a basic calendar. Events triggered are displayed in the message area. Appointments in the past are shaded grey.</p>
+	<h1>Week Calendar Demo (JSON data source)</h1>
+	<p class="description">Please Note ***. This demo uses static json data. For this reason, in order to see any event data, please edit events.json to use current dates.</p>
 	<div id='calendar'></div>
 </body>
 </html>
